Added multiple environment support to run the same test scenario on different environments.