@@ -26,6 +26,7 @@ import java.util.Properties;
 
 import org.testng.Assert;
 import org.uitnet.testing.smartfwk.ui.core.appdriver.RemoteWebDriverProvider;
+import org.uitnet.testing.smartfwk.ui.core.commons.Locations;
 import org.uitnet.testing.smartfwk.ui.core.utils.ScreenCaptureUtil;
 
 /**
@@ -46,25 +47,43 @@ public class AppConfig {
 	private WebBrowserType appWebBrowser;
 	private boolean enableWebBrowserExtension;
 	private Dimension browserWindowSize;
-	private String userProfileConfigDir;
+	private String userProfileConfigDir = "user-profiles";
 	// Key: user-profile-name, Value: UserProfile
 	private Map<String, UserProfile> userProfiles;
-	private String dbProfileConfigDir;
+	private String dbProfileConfigDir = "database-profiles";
 	// Key: db-profile-name, Value: DatabaseProfile
 	private Map<String, DatabaseProfile> dbProfiles;
 	private ProxyConfiguration proxyConfig;
 	private Map<String, String> additionalProps;
 	private ApiConfig apiConfig;
 	private AppDriverConfig appDriverConfig;
+	private EnvironmentConfig environmentConfig;
 
 	public AppConfig(String appName, Properties properties, String appsConfigDir) {
 		this.appName = appName;
 		this.appsConfigDir = appsConfigDir;
+
+		System.out.println("Going to configure '" + this.appName + "' application.");
+
 		userProfiles = new LinkedHashMap<String, UserProfile>();
 		dbProfiles = new LinkedHashMap<String, DatabaseProfile>();
 		additionalProps = new LinkedHashMap<String, String>();
 
+		String activeEnvironmentName = Locations.getAppActiveEnvironmentName(appName);
+		environmentConfig = new EnvironmentConfig(appName, activeEnvironmentName);
+
+		System.out.println("Going to set active environment '"
+				+ environmentConfig.getName() + "' for application '"
+				+ this.appName + "'.");
+
+		properties.putAll(environmentConfig.getProperties());
+
+		System.out.println("Environment '" + environmentConfig.getName() + "' properties: " + properties);
+
 		initAppConfig(appName, properties);
+
+		System.out.println("Application '" + this.appName + "' configured successfully using active environment: "
+				+ environmentConfig.getName() + ".");
 	}
 
 	public String getAppName() {
@@ -87,7 +106,7 @@ public class AppConfig {
 		propValue = properties.getProperty("APPLICATION_TYPE");
 		if (propValue == null || "".equals(propValue.trim())) {
 			Assert.fail("FATAL: Please specify APPLICATION_TYPE in AppConfig.properties. AppName: " + appName
-					+ ". Exiting ...");
+					+ ", environmentName: . Exiting ...");
 			System.exit(1);
 		} else {
 			this.appType = ApplicationType.valueOf2(propValue);
@@ -110,6 +129,18 @@ public class AppConfig {
 		} else {
 			appLaunchUrl = appLaunchUrl.trim();
 		}
+
+		propValue = properties.getProperty("APP_WEB_BROWSER");
+		if (propValue == null || "".equals(propValue.trim())) {
+			Assert.fail("FATAL: Please specify APP_WEB_BROWSER in AppConfig.properties. AppName: " + appName
+					+ ". Exiting ...");
+			System.exit(1);
+		} else {
+			appWebBrowser = WebBrowserType.valueOf2(propValue.trim());
+		}
+
+		proxyConfig = new ProxyConfiguration(appName, properties);
+		remoteWebDriverProviderClass = properties.getProperty("REMOTE_WEB_DRIVER_PROVIDER_CLASS");
 
 		appLoginPageValidatorClass = properties.getProperty("APP_LOGIN_PAGE_VALIDATOR_CLASS");
 		if (appLoginPageValidatorClass == null || "".equals(appLoginPageValidatorClass.trim())) {
@@ -138,15 +169,6 @@ public class AppConfig {
 			 * testConfigProfile.setLoginPageValidator((LoginPageValidator) cls
 			 * .newInstance());
 			 */
-		}
-
-		propValue = properties.getProperty("APP_WEB_BROWSER");
-		if (propValue == null || "".equals(propValue.trim())) {
-			Assert.fail("FATAL: Please specify APP_WEB_BROWSER in AppConfig.properties. AppName: " + appName
-					+ ". Exiting ...");
-			System.exit(1);
-		} else {
-			appWebBrowser = WebBrowserType.valueOf2(propValue.trim());
 		}
 
 		propValue = properties.getProperty("ENABLE_BROWSER_EXTENSIONS");
@@ -188,15 +210,7 @@ public class AppConfig {
 			}
 		}
 
-		userProfileConfigDir = properties.getProperty("USER_PROFILE_CONFIG_DIR");
-		if (userProfileConfigDir == null || "".equals(userProfileConfigDir.trim())) {
-			Assert.fail("FATAL: Please specify USER_PROFILE_CONFIG_DIR in AppConfig.properties. AppName: " + appName
-					+ ". Exiting ...");
-			System.exit(1);
-		} else {
-			userProfileConfigDir = appsConfigDir + File.separator + appName + File.separator
-					+ userProfileConfigDir.trim();
-		}
+		userProfileConfigDir = appsConfigDir + File.separator + appName + File.separator + userProfileConfigDir.trim();
 
 		propValue = properties.getProperty("USER_PROFILE_NAMES");
 		if (propValue == null || "".equals(propValue.trim())) {
@@ -223,15 +237,7 @@ public class AppConfig {
 			initUserProfiles();
 		}
 
-		dbProfileConfigDir = properties.getProperty("DB_PROFILE_CONFIG_DIR");
-		if (dbProfileConfigDir == null || "".equals(dbProfileConfigDir.trim())) {
-			// Assert.fail("FATAL: Please specify DB_PROFILE_CONFIG_DIR in
-			// AppConfig.properties. AppName: " + appName
-			// + ". Exiting ...");
-			// System.exit(1);
-		} else {
-			dbProfileConfigDir = appsConfigDir + File.separator + appName + File.separator + dbProfileConfigDir.trim();
-		}
+		dbProfileConfigDir = appsConfigDir + File.separator + appName + File.separator + dbProfileConfigDir.trim();
 
 		propValue = properties.getProperty("DB_PROFILE_NAMES");
 		if (propValue == null || "".equals(propValue.trim())) {
@@ -253,8 +259,6 @@ public class AppConfig {
 			initDatabaseProfiles();
 		}
 
-		proxyConfig = new ProxyConfiguration(appName, properties);
-
 		String keyStr;
 		for (Object key : properties.keySet()) {
 			keyStr = String.valueOf(key);
@@ -263,14 +267,13 @@ public class AppConfig {
 			}
 		}
 
-		remoteWebDriverProviderClass = properties.getProperty("REMOTE_WEB_DRIVER_PROVIDER_CLASS");
 		if (remoteWebDriverProviderClass == null || "".equals(remoteWebDriverProviderClass.trim())) {
 			remoteWebDriverProviderClass = null;
 		} else {
 			remoteWebDriverProviderClass = remoteWebDriverProviderClass.trim();
 			try {
 				remoteWebDriverProvider = (RemoteWebDriverProvider) Class.forName(remoteWebDriverProviderClass)
-						.newInstance();
+						.getDeclaredConstructor().newInstance();
 				remoteWebDriverProvider.setAppConfig(this);
 			} catch (Exception ex) {
 				Assert.fail("Failed to instantiate remote web driver class '" + remoteWebDriverProviderClass
@@ -278,16 +281,24 @@ public class AppConfig {
 			}
 		}
 
-		String apiConfigFile = appsConfigDir + File.separator + this.appName + File.separator + "ApiConfig.properties";
-		Properties apiConfigProps = new Properties();
-		try (FileReader fr = new FileReader(apiConfigFile)) {
-			apiConfigProps.load(fr);
-			this.apiConfig = new ApiConfig(apiConfigFile, apiConfigProps);
-		} catch (Exception ex) {
-			Assert.fail("Failed to load ApiConfig.properties file for application '" + this.appName + "'.", ex);
+		propValue = properties.getProperty("API_CONFIG_FILE_NAME");
+		if (propValue == null || "".equals(propValue.trim())) {
+			Assert.fail("FATAL: Please specify API_CONFIG_FILE_NAME in AppConfig.properties. AppName: " + appName
+					+ ". Exiting ...");
+			System.exit(1);
+		} else {
+			String apiConfigFile = appsConfigDir + File.separator + this.appName + File.separator + "api-configs"
+					+ File.separator + propValue;
+			Properties apiConfigProps = new Properties();
+			try (FileReader fr = new FileReader(apiConfigFile)) {
+				apiConfigProps.load(fr);
+				this.apiConfig = new ApiConfig(apiConfigFile, apiConfigProps);
+			} catch (Exception ex) {
+				Assert.fail("Failed to load '" + apiConfigFile + "' file for application '" + this.appName + "'.", ex);
+			}
 		}
 
-		initAppDriverConfig();
+		initAppDriverConfig(properties);
 	}
 
 	public ApiConfig getApiConfig() {
@@ -325,39 +336,45 @@ public class AppConfig {
 	}
 
 	private void initDatabaseProfiles() {
-		String configFile;
 		String currProfileName = null;
-		;
+		
 		try {
 			DatabaseProfile dbProfile;
 			for (String profileName : dbProfiles.keySet()) {
 				currProfileName = profileName;
-				configFile = dbProfileConfigDir + File.separator + currProfileName + ".xml";
 
-				dbProfile = new DatabaseProfile(appName, currProfileName, configFile);
+				dbProfile = new DatabaseProfile(appName, currProfileName);
 				dbProfiles.put(currProfileName, dbProfile);
 			}
 		} catch (Exception ex) {
 			ex.printStackTrace();
-			Assert.fail("Error in loading database profile '" + currProfileName + ".properties' for application name '"
+			Assert.fail("Error in loading database profile '" + currProfileName + ".xml' for application name '"
 					+ appName + "'. Going to exit...", ex);
 			System.exit(1);
 		}
 	}
 
-	private void initAppDriverConfig() {
-		String driverCfgFile = appsConfigDir + File.separator + appName + File.separator + "AppDriver.properties";
-		Assert.assertTrue(new File(driverCfgFile).exists(), "Missing AppDriver.properties file for '" + appName
-				+ "' application at location - " + appsConfigDir + File.separator + appName + ".");
-
-		try (FileReader fileReader = new FileReader(driverCfgFile)) {
-			Properties properties = new Properties();
-			properties.load(fileReader);
-
-			appDriverConfig = new AppDriverConfig(this, properties);
-		} catch (Exception ex) {
-			Assert.fail("Failed to read property file - " + driverCfgFile + ". Going to exit...", ex);
+	private void initAppDriverConfig(Properties properties) {
+		String propValue = properties.getProperty("APP_DRIVER_CONFIG_FILE_NAME");
+		if (propValue == null || "".equals(propValue.trim())) {
+			Assert.fail("FATAL: Please specify APP_DRIVER_CONFIG_FILE_NAME in AppConfig.properties. AppName: " + appName
+					+ ". Exiting ...");
 			System.exit(1);
+		} else {
+			String driverCfgFile = appsConfigDir + File.separator + appName + File.separator + "driver-configs"
+					+ File.separator + propValue;
+			Assert.assertTrue(new File(driverCfgFile).exists(),
+					"Missing '" + driverCfgFile + "' file for '" + appName + "' application.");
+
+			try (FileReader fileReader = new FileReader(driverCfgFile)) {
+				Properties properties2 = new Properties();
+				properties2.load(fileReader);
+
+				appDriverConfig = new AppDriverConfig(this, properties2);
+			} catch (Exception ex) {
+				Assert.fail("Failed to read property file - " + driverCfgFile + ". Going to exit...", ex);
+				System.exit(1);
+			}
 		}
 	}
 
@@ -435,5 +452,9 @@ public class AppConfig {
 		Assert.assertTrue(additionalProps.containsKey(propName), "Please specify the additional property '" + propName
 				+ "' in application '" + appName + "' AppConfig.properties file.");
 		return additionalProps.get(propName);
+	}
+
+	public EnvironmentConfig getEnvironmentConfig() {
+		return environmentConfig;
 	}
 }
